# mathfin_modeling_projects

./: README.md  data.py  experiment.py  metrics.py  model.py  pyproject.toml  return_df.parquet  run_experiment.ipynb  synthetic_data.py
